--- a/apps/sway/theme.d/theme.conf
+++ b/apps/sway/theme.d/theme.conf
@@ -23,6 +23,8 @@ set $color13 #55b5db
 set $color14 #a074c4
 set $color15 #8a553f
 
+set $black #000000
+set $white #FFFFFF
 set $neonGreen #00FFA3
 
 #$color0
@@ -34,10 +36,10 @@ set $selection-color #282a2b
 #color12
 set $accent-color #16a085
 
-# Property Name           Border  BG      Text    Indicator Child Border
-client.focused          $color1 $color12 $color0 $color12 $color12
-client.focused_inactive $color1 $color1 $color5 $color3 $color1
-client.unfocused        $color1 $color0 $color5 $color1 $color1
-client.urgent           $color8 $color8 $color0 $color8 $color8
-client.placeholder      $color0 $color0 $color5 $color0 $color0
-client.background       $color0
+# Property Name          Border  BG      Text    Indicator Child Border
+client.focused          $color1 $color12 $color0 $color12 $black
+client.focused_inactive $color1 $color1 $color5 $color3 $black
+client.unfocused        $color1 $color0 $color5 $color1 $black
+client.urgent           $color8 $color8 $color0 $color8 $black
+client.placeholder      $black $color0 $color5 $color0 $black
+client.background       $black
