--- a/apps/sway/definitions.d/definitions.conf
+++ b/apps/sway/definitions.d/definitions.conf
@@ -1,5 +1,5 @@
 set $mod Mod1
-# set $background /usr/share/wallpapers/b.png
+set $background "/home/nom/Pictures/wallpaper.png"
 set $waybar_position bottom
 set $term footclient
 set $focus_after_move false
