solid dark grey bg

--- a/apps/sway/theme.d/theme.conf
+++ b/apps/sway/theme.d/theme.conf
@@ -28,7 +28,7 @@ set $white #FFFFFF
 set $neonGreen #00FFA3
 
 #$color0
-set $background-color #141a1b
+set $background-color #000000
 #$color6
 set $text-color #eeeeee
 #color1
