--- a/apps/sway/definitions.d/defaults.conf
+++ b/apps/sway/definitions.d/defaults.conf
@@ -29,8 +29,8 @@ set $menu wofi --show drun
 set $locking swaylock --daemonize --color "$selection-color" --inside-color "$selection-color" --inside-clear-color "$text-color" --ring-color "$color2" --ring-clear-color "$color11" --ring-ver-color "$color13" --show-failed-attempts --fade-in 0.2 --grace 2 --effect-vignette 0.5:0.5 --effect-blur 7x5 --ignore-empty-password --screenshots --clock
 
 ###Notification daemon configuration
-set $notifications mako --font "$term-font" --text-color "$text-color" --border-color "$accent-color" --background-color "$background-color" --border-size 3 --width 400 --height 200 --padding 20 --margin 20 --default-timeout 15000
-
+# set $notifications mako --font "$term-font" --text-color "$text-color" --border-color "$accent-color" --background-color "$background-color" --border-size 3 --width 400 --height 200 --padding 20 --margin 20 --default-timeout 15000
+set $notifications mako --font "$term-font" --background-color "#000000"
 
 ### Idle configuration
 # This will lock your screen after 300 seconds of inactivity, then turn off
