--- a/apps/sway/definitions.d/defaults.conf
+++ b/apps/sway/definitions.d/defaults.conf
@@ -30,7 +30,7 @@ set $locking swaylock --daemonize --color "$selection-color" --inside-color "$se
 
 ###Notification daemon configuration
 # set $notifications mako --font "$term-font" --text-color "$text-color" --border-color "$accent-color" --background-color "$background-color" --border-size 3 --width 400 --height 200 --padding 20 --margin 20 --default-timeout 15000
-set $notifications mako --font "$term-font" --background-color "#000000"
+set $notifications mako --font "$term-font" --background-color "#000000" --border-size 0 --default-timeout 3000
 
 ### Idle configuration
 # This will lock your screen after 300 seconds of inactivity, then turn off
