vast upgrades fixing most of the jank yay

--- a/apps/sway/config.d/99-autostart-applications.conf
+++ b/apps/sway/config.d/99-autostart-applications.conf
@@ -8,7 +8,7 @@ exec $notifications
 # if-exists autostarts
 #
 exec {
-    '[ -x "$(command -v wlsunset)" ] && /usr/share/sway/scripts/sunset.sh "on"'
+    #'[ -x "$(command -v wlsunset)" ] && /usr/share/sway/scripts/sunset.sh "on"'
     '[ -x "$(command -v autotiling)" ] && autotiling'
     '[ -x "$(command -v foot)" ] && foot --config ${HOME}/.config/foot/foot.ini --server'
     '[ -x "$(command -v nwg-wrapper)" ] && [ -f $HOME/.config/nwg-wrapper/help.sh ] && /usr/share/sway/scripts/help.sh --restore'
