--- a/apps/sway/theme.d/theme.conf
+++ b/apps/sway/theme.d/theme.conf
@@ -18,7 +18,7 @@ set $color8  #Cd3f45
 set $color9  #db7b55
 set $color10 #e6cd69
 set $color11 #9fca56
-set $color12 #16a085
+set $color12 #0000FF
 set $color13 #55b5db
 set $color14 #a074c4
 set $color15 #8a553f
@@ -37,9 +37,9 @@ set $selection-color #282a2b
 set $accent-color #16a085
 
 # Property Name          Border  BG      Text    Indicator Child Border
-client.focused          $color1 $color12 $color0 $color12 $black
-client.focused_inactive $color1 $color1 $color5 $color3 $black
-client.unfocused        $color1 $color0 $color5 $color1 $black
-client.urgent           $color8 $color8 $color0 $color8 $black
-client.placeholder      $black $color0 $color5 $color0 $black
+client.focused          $color1 $black $color0 $neonGreen $neonGreen
+client.focused_inactive $color1 $color1 $color5 $black $black
+client.unfocused        $color1 $color0 $color5 $black $black
+client.urgent           $color8 $color8 $color0 $black $black
+client.placeholder      $black $color0 $color5 $black $black
 client.background       $black
