--- a/apps/sway/config.d/98-application-defaults.conf
+++ b/apps/sway/config.d/98-application-defaults.conf
@@ -18,5 +18,8 @@ for_window [app_id="" title=".* is sharing your screen."] floating enable
 for_window [title="wlay"] floating enable
 for_window [instance="^floating foot$"] floating enable
 
+# sway launcher
+for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10
+
 # inhibit idle
 for_window [app_id="microsoft teams - preview"] inhibit_idle fullscreen
