ranger fzf integration

--- a/apps/waybar/config.jsonc
+++ b/apps/waybar/config.jsonc
@@ -50,7 +50,7 @@
         "custom/pacman",
 
         "tray",
-        "clock",
+        "clock"
     ],
 
     // -------------------------------------------------------------------------
@@ -60,8 +60,8 @@
     "battery": {
         "interval": 30,
         "states": {
-            "warning": 30,
-            "critical": 15
+            "warning": 20,
+            "critical": 10
         },
         "format-charging": " {capacity}%",
         "format": "{icon} {capacity}%",
