added vim plugs

--- a/sway/theme.d/theme.conf
+++ b/sway/theme.d/theme.conf
@@ -38,8 +38,8 @@ set $accent-color #16a085
 
 # Property Name          Border  BG      Text    Indicator Child Border
 client.focused          $color1 $black $color0 $neonGreen $neonGreen
-client.focused_inactive $color1 $color1 $color5 $black $black
-client.unfocused        $color1 $color0 $color5 $black $black
+client.focused_inactive $color1 $black $color5 $black $black
+client.unfocused        $color1 $black $color5 $black $black
 client.urgent           $color8 $color8 $color0 $black $black
-client.placeholder      $black $color0 $color5 $black $black
+client.placeholder      $black $black $color5 $black $black
 client.background       $black
