--- a/sway/.config/sway/theme.d/theme.conf
+++ b/sway/.config/sway/theme.d/theme.conf
@@ -25,7 +25,9 @@ set $color15 #8a553f
 
 set $black #000000
 set $white #FFFFFF
-set $neonGreen #00FFA3
+set $turquoise #00FFA3
+set $neonGreen #10f90c
+set $neonYellow #e3fc02
 
 #$color0
 set $background-color #000000
