--- a/sway/.config/sway/theme.d/theme.conf
+++ b/sway/.config/sway/theme.d/theme.conf
@@ -28,6 +28,7 @@ set $white #FFFFFF
 set $turquoise #00FFA3
 set $neonGreen #10f90c
 set $neonYellow #e3fc02
+set $red #FF0000
 
 #$color0
 set $background-color #000000
@@ -38,10 +39,10 @@ set $selection-color #282a2b
 #color12
 set $accent-color #16a085
 
-# Property Name          Border  BG      Text    Indicator Child Border
-client.focused          $color1 $black $color0 $neonGreen $neonGreen
-client.focused_inactive $color1 $black $color5 $black $black
-client.unfocused        $color1 $black $color5 $black $black
-client.urgent           $color8 $color8 $color0 $black $black
-client.placeholder      $black $black $color5 $black $black
+# Property Name         Border  BG     Text    Indicator  Child Border
+client.focused          $color1 $black $white  $neonGreen $neonGreen
+client.focused_inactive $color1 $black $white  $black $black
+client.unfocused        $color1 $black $white  $black $black
+client.urgent           $color8 $red   $black  $black $black
+client.placeholder      $black  $black $color5 $black $black
 client.background       $black
