--- a/sway/.config/sway/definitions.d/defaults.conf
+++ b/sway/.config/sway/definitions.d/defaults.conf
@@ -17,7 +17,7 @@ set $bindsym bindsym --to-code
 set $unbindsym unbindsym --to-code
 
 # Your preferred terminal emulator
-set $term foot
+set $term alacritty
 set $term_float footclient -a floating_shell
 set $term_float_portrait footclient -a floating_shell_portrait
 
