--- a/gomu/.config/gomu/config
+++ b/gomu/.config/gomu/config
@@ -1,43 +1,52 @@
 
-general:
-  # confirmation popup to add the whole playlist to the queue
-  confirm_bulk_add:   true
-  confirm_on_exit:    true
-  load_prev_queue:    true
-  queue_loop:         true
-  # change this to directory that contains mp3 files
-  music_dir:          ~/music
-  # url history of downloaded audio will be saved here
-  history_path:       ~/.local/share/gomu/urls
-  popup_timeout:      5s
-  # initial volume when gomu starts up
-  volume:             100
-  # some of the terminal supports unicode character
-  # you can set this to true to enable emojis
-  emoji:              false
-  # if you experiencing error using this invidious instance, you can change it
-  # to another instance from this list:
-  # https://github.com/iv-org/documentation/blob/master/Invidious-Instances.md
-  invidious_instance: "https://vid.puffyan.us"
 
-# not all colors can be reproducible in terminal
-# changing hex colors may or may not produce expected result
-color:
-  accent:            "#008B8B"
-  # none is transparent
-  # only background has none attribute
-  background:        none
-  foreground:        "#FFFFFF"
-  now_playing_title: "#017702"
-  playlist:          "#008B8B"
-  popup:             "#0A0F14"
+module General {
+	# confirmation popup to add the whole playlist to the queue
+	confirm_bulk_add    = true
+	confirm_on_exit     = true
+	queue_loop          = false
+	load_prev_queue     = true
+	popup_timeout       = "5s"
+	# change this to directory that contains mp3 files
+	music_dir           = "~/Music"
+	# url history of downloaded audio will be saved here
+	history_path        = "~/.local/share/gomu/urls"
+	# some of the terminal supports unicode character
+	# you can set this to true to enable emojis
+	use_emoji           = true
+	# initial volume when gomu starts up
+	volume              = 80
+	# if you experiencing error using this invidious instance, you can change it
+	# to another instance from this list:
+	# https://github.com/iv-org/documentation/blob/master/Invidious-Instances.md
+	invidious_instance  = "https://vid.puffyan.us"
+	# Prefered language for lyrics to be displayed, if not available, english version
+	# will be displayed.
+	# Available tags: en,el,ko,es,th,vi,zh-Hans,zh-Hant, and can be separated with comma. 
+	# find more tags: youtube-dl --skip-download --list-subs "url"
+	lang_lyric          = "en"
+}
 
-# default emoji here is using awesome-terminal-fonts
-# you can change these to your liking
-emoji:
-  playlist:          
-  file:              
-  loop:              ﯩ
-  noloop:            
- 
-# vi:ft=yaml
+module Emoji {
+	# default emoji here is using awesome-terminal-fonts
+	# you can change these to your liking
+	playlist     = ""
+	file         = ""
+	loop         = "ﯩ"
+	noloop       = ""
+}
+
+module Color {
+	# not all colors can be reproducible in terminal
+	# changing hex colors may or may not produce expected result
+	accent            = "#008B8B"
+	background        = "none"
+	foreground        = "#FFFFFF"
+	now_playing_title = "#017702"
+	playlist          = "#008B8B"
+	popup             = "#0A0F14"
+}
+
+# you can get the syntax highlighting for this language here:
+# https://github.com/mattn/anko/tree/master/misc/vim
+# vim: ft=anko
