--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -64,18 +64,18 @@ alpha=0.9
 foreground=eeeeee
 background=000000
 regular0=141a1B  # black
-regular1=cd3f45  # red
-regular2=9fca56  # green
-regular3=e6cd69  # yellow
-regular4=16a085  # blue
-regular5=a074c4  # magenta
-regular6=55b5db  # cyan
+regular1=ea0468  # red
+regular2=04ea3e  # green
+regular3=c8ea04  # yellow
+regular4=04b4ea  # blue
+regular5=ea04a9  # magenta
+regular6=04eaad  # cyan
 regular7=d6d6d6  # white
 bright0=41535B   # bright black
 bright1=cd3f45  # red
-bright2=9fca56  # green
-bright3=e6cd69  # yellow
-bright4=16a085  # blue
+bright2=04ea3e  # green
+bright3=c8ea04  # yellow
+bright4=04b4ea  # blue
 bright5=a074c4  # magenta
 bright6=55b5db  # cyan
 bright7=ffffff   # bright white
