--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -6,6 +6,6 @@ scan_timeout = 10
 add_newline = true
 
 [character]
-success_symbol = "(bold green)"
-error_symbol = "(bold red)"
+success_symbol = "(bold green)>"
+error_symbol = "(bold red)>"
 
