--- a/sway/.config/sway/config.d/99-autostart-applications.conf
+++ b/sway/.config/sway/config.d/99-autostart-applications.conf
@@ -1,5 +1,5 @@
 # enable idle mode
-exec $idle
+# exec $idle
 
 # autostart background applications
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
