--- a/sway/.config/sway/definitions.d/defaults.conf
+++ b/sway/.config/sway/definitions.d/defaults.conf
@@ -39,14 +39,14 @@ set $notifications mako --font "$term-font" --background-color "#000000" --borde
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 #
-set $idle swayidle -w \
-    timeout 240 'light -G > /tmp/brightness && light -S 10' resume 'light -S $([ -f /tmp/brightness ] && cat /tmp/brightness || echo 100%)' \
-    timeout 300 'exec $locking' \
-    timeout 600 'swaymsg "output * dpms off"' \
-    resume 'swaymsg "output * dpms on"' \
-    before-sleep 'playerctl pause' \
-    before-sleep 'exec $locking'
-
+# set $idle swayidle -w \
+#     timeout 240 'light -G > /tmp/brightness && light -S 10' resume 'light -S $([ -f /tmp/brightness ] && cat /tmp/brightness || echo 100%)' \
+#     timeout 300 'exec $locking' \
+#     timeout 600 'swaymsg "output * dpms off"' \
+#     resume 'swaymsg "output * dpms on"' \
+#     before-sleep 'playerctl pause' \
+#     before-sleep 'exec $locking'
+#
 # statusbar command
 set $statusbar waybar
 set $waybar_position top
