nvim rust-tools

--- a/sway/.config/sway/config.d/50-systemd-user.conf
+++ b/sway/.config/sway/config.d/50-systemd-user.conf
@@ -5,3 +5,7 @@
 exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
+
+# required by protonvpn
+exec nm-applet
+
