--- a/sway/.config/sway/definitions.d/defaults.conf
+++ b/sway/.config/sway/definitions.d/defaults.conf
@@ -78,6 +78,17 @@ set $ws8 number 8
 set $ws9 number 9
 set $ws10 number 10
 
+# set $ws1 "1:一"
+# set $ws2 "2:二"
+# set $ws3 "3:三"
+# set $ws4 "4:四"
+# set $ws5 "5:五"
+# set $ws6 "6:六"
+# set $ws7 "7:七"
+# set $ws8 "8:八"
+# set $ws9 "9:九"
+# set $ws10 "10:十"
+
 # screenshot 
 set $grimshot /usr/share/sway/scripts/grimshot
 set $screenshot_screen_clipboard $grimshot --notify copy output
