surround and nvim

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -474,6 +474,8 @@ map yd yank dir
 map yn yank name
 map y. yank name_without_extension
 
+map <C-o> fzf_select
+
 # Filesystem Operations
 map =  chmod
 
