--- a/sway/.config/sway/config.d/50-systemd-user.conf
+++ b/sway/.config/sway/config.d/50-systemd-user.conf
@@ -7,5 +7,5 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # required by protonvpn
-exec nm-applet
+# exec nm-applet
 
