--- a/sway/.config/sway/definitions.d/defaults.conf
+++ b/sway/.config/sway/definitions.d/defaults.conf
@@ -9,7 +9,6 @@ set $down j
 set $up k
 set $right l
 
-
 # Add --to-code to bindsym, support for non-latin layouts
 set $bindsym bindsym --to-code
 
@@ -18,7 +17,7 @@ set $unbindsym unbindsym --to-code
 
 # Your preferred terminal emulator
 set $term alacritty
-set $term_float footclient -a floating_shell
+set $term_float footclient --app-id=floating_shell --window-size-chars=128x36
 set $term_float_portrait footclient -a floating_shell_portrait
 
 # Your preferred application launcher
