--- a/sway/.config/sway/config.d/99-autostart-applications.conf
+++ b/sway/.config/sway/config.d/99-autostart-applications.conf
@@ -24,4 +24,4 @@ exec_always {
 # https://github.com/Alexays/Waybar/issues/1093#issuecomment-841846291
 #exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
 #exec hash dbus-update-activation-environment 2>/dev/null && \
-    dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
+#    dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
