--- a/sway/.config/sway/theme.d/theme.conf
+++ b/sway/.config/sway/theme.d/theme.conf
@@ -38,11 +38,10 @@ set $text-color #eeeeee
 set $selection-color #282a2b
 #color12
 set $accent-color #16a085
-
 # Property Name         Border  BG     Text    Indicator  Child Border
-client.focused          $color1 $black $white  $neonGreen $neonGreen
-client.focused_inactive $color1 $black $white  $black $black
-client.unfocused        $color1 $black $white  $black $black
+client.focused          $neonGreen $neonGreen $black $neonGreen $neonGreen
+client.focused_inactive $black $black $neonGreen  $black $black
+client.unfocused        $black $black $white  $black $black
 client.urgent           $color8 $red   $black  $black $black
 client.placeholder      $black  $black $color5 $black $black
-client.background       $black
+client.background       $neonGreen
