--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,6 +11,9 @@
 
 set $mod Mod1
 
+# make capslock esc
+setxkbmap -option caps:escape
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 12
@@ -52,16 +55,17 @@ bindsym $mod+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindcode $mod+Space exec "rofi -modi drun,run -show drun"
+#bindcode $mod+space exec "rofi -modi drun,run -show drun"
+bindsym $mod+space exec alacritty --title "pop-up" --command sway-launcher-desktop
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -70,10 +74,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+# bindsym $mod+Shift+j move left
+# bindsym $mod+Shift+k move down
+# bindsym $mod+Shift+l move up
+# bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -82,7 +86,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+#bindsym $mod+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -99,7 +103,7 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+#bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -131,6 +135,10 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
+bindsym $mod+bracketright workspace next
+bindsym $mod+bracketleft workspace prev
+bindsym $mod+shift+l workspace next
+bindsym $mod+shift+h workspace prev
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -159,10 +167,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 2 px or 2 ppt
+        bindsym k resize grow height 2 px or 2 ppt
+        bindsym j resize shrink height 2 px or 2 ppt
+        bindsym l resize grow width 2 px or 2 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -176,7 +184,7 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
-#bindsym $mod+r mode "resize"
+bindsym $mod+r mode "resize"
 
 #Nitrogen
 exec --no-startup-id nitrogen --restore
@@ -190,9 +198,9 @@ exec --no-startup-id nitrogen --restore
 
 # Screen brightness controls
 # increase screen brightness
-#bindsym XF86MonBrightnessUp exec xbacklight -inc 20
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20
 # decrease screen brightness
-#bindsym XF86MonBrightnessDown exec xbacklight -dec 20
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20
 
 #Luz background
 #bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
@@ -201,25 +209,33 @@ exec --no-startup-id nitrogen --restore
 # Start i3bar to display a workspace bar (plus the system information i3st>
 # finds out, if available)
 bar {
-status_command i3status
-mode hide
+  status_command i3status
+#mode hide
 #output primary
 #tray_output none
-font pango:DejaVu Sans Mono 6
+  font pango:DejaVu Sans Mono 10
 }
 
 #Pop up
 for_window [window_role="pop-up"] floating enable
+for_window [title="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
 #Sem borda
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border pixel 3
+for_window [title="pop-up"] border pixel 6
 new_window 1pixel
+
+set $borderColor #10f90c
+set $windowTitleBG $borderColor
+
+client.focused $borderColor $windowTitleBG #000000 #000000 $borderColor
+client.unfocused #000000 $windowTitleBG #000000 #000000 #000000
 
 # Provide Gaps to Windows. Increase/Decrease as you like.
 smart_borders on
-gaps inner 1
-gaps outer 1
+gaps inner 10
+gaps outer 0
 
 #print da poha da tela
 #Original
@@ -233,9 +249,8 @@ bindsym --release Shift+Print exec "scrot --select 'scrot-%Y-%m-%d_%h-%m-%s_$wx$
 # Teste
 #~/Pictures/%Y-%m-%d-%H-%M-%S.png
 
-
 # Firefox
-bindsym $mod+w exec firefox
+bindsym $mod+b exec firefox
 
 # Files
-bindsym $mod+e exec nautilus
+#bindsym $mod+e exec nautilus
