--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,11 +12,31 @@
 set $mod Mod1
 
 # make capslock esc
-setxkbmap -option caps:escape
+exec setxkbmap -option caps:escape
+
+set $gtk-theme Matcha-dark-sea
+set $icon-theme Papirus-Dark-Maia
+set $cursor-theme xcursor-breeze
+set $gui-font Roboto 11
+set $term-font RobotoMono Nerd Font 14
+set $kvantum-theme Matchama-Dark
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 12
+# font pango:monospace 12
+font Roboto 11
+
+exec gsettings set org.gnome.desktop.interface gtk-theme $gtk-theme
+exec gsettings set org.gnome.desktop.interface icon-theme $icon-theme
+exec gsettings set org.gnome.desktop.interface cursor-theme $cursor-theme
+exec gsettings set org.gnome.desktop.interface font-name $gui-font
+
+# exec_always {
+#   gsettings set org.gnome.desktop.interface gtk-theme $gtk-theme
+#   gsettings set org.gnome.desktop.interface icon-theme $icon-theme
+#   gsettings set org.gnome.desktop.interface cursor-theme $cursor-theme
+#   gsettings set org.gnome.desktop.interface font-name $gui-font
+# }
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -51,6 +71,8 @@ floating_modifier $mod
 bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+q kill
+
+focus_follows_mouse no
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
@@ -213,7 +235,19 @@ bar {
 #mode hide
 #output primary
 #tray_output none
-  font pango:DejaVu Sans Mono 10
+  font pango:RobotoMono Nerd Font Bold 10
+  separator_symbol ⁞
+  colors {
+    background #000000
+    statusline #ffffff
+    separator #333333
+
+    focused_workspace  #10F9FC #10F9FC #000000
+    active_workspace   #333333 #5f676a #ffffff
+    inactive_workspace #000000 #000000 #10F9FC
+    urgent_workspace   #2f343a #900000 #ffffff
+    binding_mode       #2f343a #900000 #ffffff
+  }
 }
 
 #Pop up
@@ -226,7 +260,7 @@ for_window [class="^.*"] border pixel 3
 for_window [title="pop-up"] border pixel 6
 new_window 1pixel
 
-set $borderColor #10f90c
+set $borderColor #10f90C
 set $windowTitleBG $borderColor
 
 client.focused $borderColor $windowTitleBG #000000 #000000 $borderColor
