--- a/polybar/.config/polybar/grayblocks/config.ini
+++ b/polybar/.config/polybar/grayblocks/config.ini
@@ -139,7 +139,7 @@ font-1 = "feather:size=10;3"
 ;   modules-right = ipc clock
 
 modules-left = i3 title
-modules-center = updates sep memory sep cpu sep battery
+modules-center = memory sep sep sep nvidia sep sep sep cpu sep battery
 modules-right = network alsa backlight date
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
