--- a/polybar/.config/polybar/grayblocks/user_modules.ini
+++ b/polybar/.config/polybar/grayblocks/user_modules.ini
@@ -66,6 +66,15 @@ click-right = exo-open --launch TerminalEmulator &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/nvidia]
+type = custom/script
+interval = 5
+exec = nvidia-smi --query-gpu=memory.used,pstate --format=csv,noheader
+format-prefix = "﬙ "
+format = <label>
+label = %output%
+content-padding = 4
+
 [module/launcher]
 type = custom/text
 content = 
