terminal esc nvim

--- a/polybar/.config/polybar/grayblocks/user_modules.ini
+++ b/polybar/.config/polybar/grayblocks/user_modules.ini
@@ -69,11 +69,12 @@ click-right = exo-open --launch TerminalEmulator &
 [module/nvidia]
 type = custom/script
 interval = 5
-exec = nvidia-smi --query-gpu=memory.used,pstate --format=csv,noheader
+exec = nvidia-smi --query-gpu=memory.used,utilization.gpu,pstate --format=csv,noheader
 format-prefix = "﬙ "
 format = <label>
 label = %output%
 content-padding = 4
+click-left = alacritty --title "pop-up" --command="nvidia-smi" --hold
 
 [module/launcher]
 type = custom/text
