switched to kitty

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -106,6 +106,9 @@ font:
   # Normal (roman) font face
   normal:
     family: Iosevka
+  bold:
+    family: Iosevka
+  family: Iosevka
   #
   # Default:
   #   - (macOS) Menlo
