--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Iosevka
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +24,7 @@ font_family      Iosevka
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14
+font_size 10
 
 #: Font size (in pts)
 
