--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
 
 
 set -g mouse on
+set -s escape-time 0
 
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
@@ -14,5 +15,4 @@ bind-key "\\" split-window -fh -c "#{pane_current_path}"
 
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
-
 
