--- a/weston/.config/weston.ini
+++ b/weston/.config/weston.ini
@@ -1,11 +1,11 @@
 [core]
-xwayland=false
+xwayland=true
 
 [libinput]
 enable-tap=true
 
 [shell]
-#background-image=/usr/share/backgrounds/gnome/Aqua.jpg
+background-image=/home/nom/.wallpaper.png
 background-type=scale-crop
 background-color=0xff000000
 #background-color=0xff002244
@@ -16,8 +16,8 @@ panel-position=bottom
 #animation=zoom
 #startup-animation=none
 close-animation=none
-focus-animation=dim-layer
-#binding-modifier=ctrl
+focus-animation=none # dim-layer
+binding-modifier=alt
 num-workspaces=6
 locking=false
 cursor-theme=Adwaita
@@ -35,15 +35,15 @@ keymap_rules=evdev
 #keymap_variant=colemak,
 #keymap_options=grp:shifts_toggle
 #keymap_options=caps:ctrl_modifier,shift:both_capslock_cancel
-repeat-rate=30
-repeat-delay=300
+repeat-rate=40
+repeat-delay=200
 
 [output]
 name=eDP-1
 scale=2
 
 [launcher]
-icon=/usr/share/icons/hicolor/24x24/apps/firefox.png
+icon=/usr/share/icons/hicolor/48x48/apps/kitty.png
 path=/usr/bin/alacritty
 
 [launcher]
