--- a/weston/.config/weston.ini
+++ b/weston/.config/weston.ini
@@ -1,5 +1,8 @@
 [core]
-xwayland=true
+xwayland=false
+shell=desktop-shell.so
+modules=xwayland.so,cms-colord.so
+# backend=drm-backend.so
 
 [libinput]
 enable-tap=true
@@ -13,14 +16,14 @@ background-color=0xff000000
 panel-color=0x00ffffff
 panel-position=bottom
 #clock-format=none
-#animation=zoom
+animation=none
 #startup-animation=none
 close-animation=none
 focus-animation=none # dim-layer
 binding-modifier=alt
 num-workspaces=6
 locking=false
-cursor-theme=Adwaita
+cursor-theme=xcursor-breeze
 cursor-size=24
 
 # tablet options
@@ -32,9 +35,10 @@ cursor-size=24
 [keyboard]
 keymap_rules=evdev
 #keymap_layout=us,de
-#keymap_variant=colemak,
+#keymap_variant=dellusbmm,
 #keymap_options=grp:shifts_toggle
 #keymap_options=caps:ctrl_modifier,shift:both_capslock_cancel
+keymap_options=caps:escape
 repeat-rate=40
 repeat-delay=200
 
@@ -43,8 +47,12 @@ name=eDP-1
 scale=2
 
 [launcher]
-icon=/usr/share/icons/hicolor/48x48/apps/kitty.png
+icon=/usr/share/icons/hicolor/24x24/apps/org.xfce.terminal-settings.png
 path=/usr/bin/alacritty
+
+[launcher]
+icon=/usr/share/icons/hicolor/24x24/apps/org.xfce.terminal-settings.png
+path=/usr/bin/kitty
 
 [launcher]
 icon=/usr/share/icons/hicolor/24x24/apps/firefox.png
