--- a/sway/.config/sway/config.d/96-waybar-config.conf
+++ b/sway/.config/sway/config.d/96-waybar-config.conf
@@ -1,5 +1,5 @@
 bar {
     id default
-    swaybar_command /usr/share/sway/scripts/waybar.sh
+    swaybar_command waybar -c $config_path/bar/config.jsonc -s $config_path/bar/style.css
     position bottom
 }
