--- a/sway/.config/sway/config.d/99-autostart-applications.conf
+++ b/sway/.config/sway/config.d/99-autostart-applications.conf
@@ -2,7 +2,7 @@
 # exec $idle
 
 # autostart background applications
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec $notifications
 
 # if-exists autostarts
