--- a/sway/.config/sway/definitions.d/defaults.conf
+++ b/sway/.config/sway/definitions.d/defaults.conf
@@ -2,6 +2,7 @@
 #
 # Logo key. Use Mod1 for Alt and Mod4 for Super.
 set $mod Mod4
+set $config_path $HOME/.config/sway/
 
 # Home row direction keys, like vim
 set $left h
