--- a/sway-simple/.config/sway/definitions.d/defaults.conf
+++ b/sway-simple/.config/sway/definitions.d/defaults.conf
@@ -50,17 +50,41 @@ set $onscreen_bar bash /usr/share/sway/scripts/wob.sh "$accent-colorFF" "$backgr
 # calendar application
 set $calendar $term_float "khal interactive"
 
+# workspaces
+# set $ws1   1:
+# set $ws2   2:
+# set $ws3   3:3
+# set $ws4   4:4
+# set $ws5   5:5
+# set $ws6   6:6
+# set $ws7   7:7
+# set $ws8   8:8
+# set $ws9   9:9
+# set $ws0   10:10
+# set $wsF1  11:
+# set $wsF2  12:
+# set $wsF3  13:13
+# set $wsF4  14:14
+# set $wsF5  15:15
+# set $wsF6  16:16
+# set $wsF7  17:17
+# set $wsF8  18:
+# set $wsF9  19:19
+# set $wsF10 20:20
+# set $wsF11 21:
+# set $wsF12 22:
+
 # workspace names
-set $ws1 number 1
-set $ws2 number 2
-set $ws3 number 3
-set $ws4 number 4
-set $ws5 number 5
-set $ws6 number 6
-set $ws7 number 7
-set $ws8 number 8
-set $ws9 number 9
-set $ws10 number 10
+# set $ws1 number 1
+# set $ws2 number 2
+# set $ws3 number 3
+# set $ws4 number 4
+# set $ws5 number 5
+# set $ws6 number 6
+# set $ws7 number 7
+# set $ws8 number 8
+# set $ws9 number 9
+# set $ws10 number 10
 
 # set $ws1 "1:一"
 # set $ws2 "2:二"
