--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -14,7 +14,7 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%-d.%-m.%Y. %H:%M:%S %p'; do sleep 1; done
+    # status_command while date +'%-d.%-m.%Y. %H:%M:%S %p'; do sleep 1; done
 
     colors {
         statusline #ffffff
