--- a/weston/.config/weston.ini
+++ b/weston/.config/weston.ini
@@ -1,8 +1,8 @@
 [core]
 xwayland=false
 shell=desktop-shell.so
-modules=xwayland.so,cms-colord.so
-# backend=drm-backend.so
+#modules=xwayland.so,cms-colord.so
+backend=drm-backend.so
 
 [libinput]
 enable-tap=true
