--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -14,15 +14,15 @@ line-height=15
 # vertical-letter-offset=0
 # underline-offset=<font metrics>
 # box-drawings-uses-font-glyphs=no
-# dpi-aware=yes
+dpi-aware=yes
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-# pad=2x2                             # optionally append 'center'
+pad=2x2                             # optionally append 'center'
 resize-delay-ms=50
 
-# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 # bold-text-in-bright=no
 # bell=none
@@ -43,16 +43,16 @@ lines=10000
 # indicator-format=
 
 [url]
-# launch=xdg-open ${url}
+launch=xdg-open ${url}
 # label-letters=sadfjklewcmpgh
 # osc8-underline=url-mode
 # protocols = http, https, ftp, ftps, file, gemini, gopher
 
 [cursor]
-# style=block
-color= 141a1b eeeeee
-# blink=no
-# beam-thickness=1.5
+style=block
+color=141a1b eeeeee
+blink=yes
+beam-thickness=1.5
 # underline-thickness=<font underline thickness>
 
 [mouse]
