--- a/sway/.config/sway/definitions.d/definitions.conf
+++ b/sway/.config/sway/definitions.d/definitions.conf
@@ -1,6 +1,6 @@
 set $mod Mod1
 set $win Mod4
-set $background "/home/nom/assets/wallpaper.png"
+set $background $HOME/.wallpaper.png
 set $waybar_position bottom
 set $term footclient
 set $focus_after_move false
