--- a/sway/.config/sway/theme.d/theme.conf
+++ b/sway/.config/sway/theme.d/theme.conf
@@ -6,42 +6,41 @@ set $gui-font Roboto 11
 set $term-font RobotoMono Nerd Font 14
 set $kvantum-theme Matchama-Dark
 
-set $color0  #141a1b
-set $color1  #282a2b
-set $color2  #3B758C
-set $color3  #41535B
-set $color4  #43a5d5
-set $color5  #d6d6d6
-set $color6  #eeeeee
-set $color7  #ffffff
-set $color8  #Cd3f45
-set $color9  #db7b55
-set $color10 #e6cd69
-set $color11 #9fca56
-set $color12 #0000FF
-set $color13 #55b5db
-set $color14 #a074c4
-set $color15 #8a553f
+# set $color0  #141a1b
+# set $color1  #282a2b
+# set $color2  #3B758C
+# set $color3  #41535B
+# set $color4  #43a5d5
+# set $color5  #d6d6d6
+# set $color6  #eeeeee
+# set $color7  #ffffff
+# set $color8  #Cd3f45
+# set $color9  #db7b55
+# set $color10 #e6cd69
+# set $color11 #9fca56
+# set $color12 #0000FF
+# set $color13 #55b5db
+# set $color14 #a074c4
+# set $color15 #8a553f
 
 set $black #000000
 set $white #FFFFFF
-set $turquoise #00FFA3
+set $neonBlue #00FFFF
 set $neonGreen #10f90c
-set $neonYellow #e3fc02
+set $neonYellow #DDFF00
 set $red #FF0000
+set $grey #282a2b
+set $lightGrey #AAAAAA
 
-#$color0
-set $background-color #000000
-#$color6
-set $text-color #eeeeee
-#color1
-set $selection-color #282a2b
-#color12
-set $accent-color #16a085
+set $selectedTabBackground $grey
+set $selectedTabText $white
+set $tabText $lightGrey
+set $selectedBorder $neonBlue
+
 # Property Name         Border  BG     Text    Indicator  Child Border
-client.focused          $neonGreen $neonGreen $black $neonGreen $neonGreen
+client.focused          $black $selectedTabBackground $selectedTabText $black $selectedBorder
 client.focused_inactive $black $black $neonGreen  $black $black
-client.unfocused        $black $black $white  $black $black
-client.urgent           $color8 $red   $black  $black $black
+client.unfocused        $black $black $tabText  $black $black
+client.urgent           $black $red   $black  $black $black
 client.placeholder      $black  $black $color5 $black $black
-client.background       $neonGreen
+#client.background       #333333
