--- a/sway/.config/sway/theme.d/theme.conf
+++ b/sway/.config/sway/theme.d/theme.conf
@@ -2,8 +2,8 @@
 set $gtk-theme Matcha-dark-sea
 set $icon-theme Papirus-Dark-Maia
 set $cursor-theme xcursor-breeze
-set $gui-font Roboto 11
-set $term-font RobotoMono Nerd Font 14
+set $gui-font pango:Roboto 11
+set $term-font pango:RobotoMono Nerd Font 14
 set $kvantum-theme Matchama-Dark
 
 # set $color0  #141a1b
