--- a/sway/.config/sway/config.d/98-application-defaults.conf
+++ b/sway/.config/sway/config.d/98-application-defaults.conf
@@ -23,3 +23,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 
 # inhibit idle
 for_window [app_id="microsoft teams - preview"] inhibit_idle fullscreen
+
+# titles
+for_window [title="."] title_format "<b>%title</b> (%app_id)"
+#for_window [app_id="foot"] tit
