zgen, nvim, sway

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -104,10 +104,10 @@ window:
 # Font configuration
 font:
   # Normal (roman) font face
-  normal:
-    family: Iosevka
-  bold:
-    family: Iosevka
+  # normal:
+  #   family: Iosevka
+  # bold:
+  #   family: Iosevka
   family: Iosevka
   #
   # Default:
