--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,11 +1,11 @@
 # -*- conf -*-
 
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
-term=foot-extra # (or xterm-256color if built with -Dterminfo=disabled)
+# term=foot-extra # (or xterm-256color if built with -Dterminfo=disabled)
 # login-shell=no
 
 #font=RobotoMono Nerd Font Mono:size=10
-font=Iosevka Nerd Font Mono:size=10
+font=Iosevka Nerd Font:size=10
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -47,7 +47,7 @@ lines=10000
 launch=xdg-open ${url}
 # label-letters=sadfjklewcmpgh
 # osc8-underline=url-mode
-# protocols = http, https, ftp, ftps, file, gemini, gopher
+protocols = http, https, ftp, ftps, file, gemini, gopher
 
 [cursor]
 style=block
