--- a/sway/.config/sway/config.d/99-autostart-applications.conf
+++ b/sway/.config/sway/config.d/99-autostart-applications.conf
@@ -11,6 +11,7 @@ exec {
     #'[ -x "$(command -v wlsunset)" ] && /usr/share/sway/scripts/sunset.sh "on"'
     '[ -x "$(command -v autotiling)" ] && autotiling'
     '[ -x "$(command -v foot)" ] && foot --config ${HOME}/.config/foot/foot.ini --server'
+    '[ -x "$(command -v ulauncher)" ] && ulauncher --hide-window'
     '[ -x "$(command -v nwg-wrapper)" ] && [ -f $HOME/.config/nwg-wrapper/help.sh ] && /usr/share/sway/scripts/help.sh --restore'
 }
 exec_always {
