--- a/sway/.config/sway/config.d/98-application-defaults.conf
+++ b/sway/.config/sway/config.d/98-application-defaults.conf
@@ -19,7 +19,8 @@ for_window [title="wlay"] floating enable
 for_window [instance="^floating foot$"] floating enable
 
 # sway launcher
-for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10
+#for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10
+for_window [app_id="^ulauncher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border none
 
 # inhibit idle
 for_window [app_id="microsoft teams - preview"] inhibit_idle fullscreen
