lsp installer now set up to load lsps directly

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -18,9 +18,9 @@ line-height=15
 # dpi-aware=yes
 
 # initial-window-size-pixels=700x500  # Or,
-# initial-window-size-chars=<COLSxROWS>
+initial-window-size-chars=160x40
 # initial-window-mode=windowed
-pad=2x2                             # optionally append 'center'
+#pad=20x20                             # optionally append 'center'
 resize-delay-ms=50
 
 notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
