--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -89,14 +89,14 @@ bright7=ffffff   # bright white
 # urls=<regular3>
 
 [csd]
-# preferred=server
-# size=26
-# color=<foreground color>
-# button-width=26
-# button-color=<background color>
-# button-minimize-color=<regular4>
-# button-maximize-color=<regular2>
-# button-close-color=<regular1>
+preferred=none # server | none
+size=26
+color=FF0000
+button-width=26
+button-color=FFFFFF
+button-minimize-color=FFFFFF
+button-maximize-color=FFFFFF
+button-close-color=FFFFFF
 
 [key-bindings]
 # scrollback-up-page=Shift+Page_Up
