--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2004,3 +2004,9 @@ background_opacity 0.85
 #: }}}
 
 #: }}}
+#
+
+map  ctrl+enter      send_text normal,application \x1b[13;5u
+map  shift+enter     send_text normal,application \x1b[13;2u
+map  ctrl+tab        send_text normal,application \x1b[9;5u
+map  ctrl+shift+tab  send_text normal,application \x1b[9;6u
