--- a/sway/.config/sway/config.d/98-application-defaults.conf
+++ b/sway/.config/sway/config.d/98-application-defaults.conf
@@ -9,6 +9,7 @@ for_window [app_id="firefox" title="Library"] floating enable, border pixel 1, s
 for_window [app_id="thunderbird" title=".*Reminder"] floating enable
 for_window [app_id="floating_shell_portrait"] floating enable, border pixel 3, sticky enable, resize set width 30 ppt height 40 ppt
 for_window [app_id="floating_shell"] floating enable, border pixel 3, sticky enable
+for_window [class="floating"] floating enable, border pixel 0, sticky enable
 for_window [app_id="Manjaro.manjaro-settings-manager"] floating enable
 for_window [app_id="" title="Picture in picture"] floating enable, sticky enable
 for_window [app_id="xsensors"] floating enable
