--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -5,11 +5,11 @@
 # login-shell=no
 
 #font=RobotoMono Nerd Font Mono:size=10
-font=Iosevka Nerd Font:size=10
+# font=Iosevka Nerd Font:size=10
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
-line-height=15
+# line-height=15
 # letter-spacing=0
 # horizontal-letter-offset=0
 # vertical-letter-offset=0
