--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -20,9 +20,9 @@
 
   "modules-left": [
     // "custom/menu",
-    "sway/workspaces",
-    "custom/scratchpad",
-    "custom/workspace-name"
+    "sway/workspaces"
+    //"custom/scratchpad"
+    //"custom/workspace-name"
   ],
   "modules-center": ["custom/wf-recorder", "sway/mode"],
   "modules-right": [
@@ -30,7 +30,7 @@
     //"custom/portfolio-change",
     // informational
     // "sway/language",
-    "custom/github",
+    // "custom/github",
     "cpu",
     "memory",
     "battery",
@@ -41,14 +41,14 @@
     "bluetooth",
 
     // media
-    "custom/playerctl",
+    // "custom/playerctl",
     "idle_inhibitor",
     "pulseaudio",
     "backlight",
 
     // system
     // "custom/sunset",
-    "custom/pacman",
+    // "custom/pacman",
 
     //"custom/btc-price",
 
@@ -265,22 +265,5 @@
     "exec-if": "command -v gh >/dev/null && gh auth status 2>&1 | grep -q -m 1 'Logged in' && gh api '/notifications' -q 'length' | grep -q -m 1 '0' ; test $? -eq 1",
     "on-click": "xdg-open https://github.com/notifications && sleep 30 && pkill -RTMIN+4 waybar",
     "signal": 4
-  },
-
-  "custom/playerctl": {
-    "interval": "once",
-    "tooltip": true,
-    "return-type": "json",
-    "format": "{icon}",
-    "format-icons": {
-      "Playing": "奈",
-      "Paused": ""
-    },
-    "exec": "playerctl metadata --format '{\"alt\": \"{{status}}\", \"tooltip\": \"{{playerName}}:  {{markup_escape(title)}} - {{markup_escape(artist)}}\" }'",
-    "on-click": "playerctl play-pause; pkill -RTMIN+5 waybar",
-    "on-click-right": "playerctl next; pkill -RTMIN+5 waybar",
-    "on-scroll-up": "playerctl position 10+; pkill -RTMIN+5 waybar",
-    "on-scroll-down": "playerctl position 10-; pkill -RTMIN+5 waybar",
-    "signal": 5
   }
 }
