--- a/nixos.toml
+++ b/nixos.toml
@@ -1,5 +1,5 @@
 includes = []
-packages = ["default", "bash", "sway"]
+packages = ["default", "bash", "sway", "nvim-container", "lf", "foot"]
 
 [files]
 
