--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -6,6 +6,7 @@ depends = []
 [default.files]
 
 [default.variables]
+"colorscheme" = "zellner"
 
 [nvim-container]
 files = { nvim-container = "~/.config/nvim" }
@@ -24,7 +25,8 @@ files = { "bash/rc.bash" = "~/.bashrc", "bash/fzm.bash" = "~/.bash/fzm.bash" }
 "waybar" = "~/.config/waybar"
 
 [nvim]
-files = { "nvim" = "~/.config/nvim" }
+files = { "neovim.lua" = "~/.config/nvim/init.lua" }
+# variables = { "colorscheme" = "darkblue" }
 
 [foot]
 files = { "foot/foot.ini" = "~/.config/foot/foot.ini" }
