--- a/sway.conf
+++ b/sway.conf
@@ -47,6 +47,38 @@ bar {
   }
 }
 
+#don't show gaps if there's only one window on the desktop
+smart_gaps on
+
+# set floating mode for specific applications
+for_window [instance="lxappearance"] floating enable
+for_window [app_id="pamac-manager"] floating enable
+for_window [app_id="blueberry.py"] floating enable
+for_window [app_id="firefox" title="Library"] floating enable, border pixel 1, sticky enable
+for_window [app_id="thunderbird" title=".*Reminder"] floating enable
+for_window [app_id="floating_shell_portrait"] floating enable, border pixel 3, sticky enable, resize set width 30 ppt height 40 ppt
+for_window [app_id="floating_shell"] floating enable, border pixel 3, sticky disable
+for_window [class="floating"] floating enable, border pixel 0, sticky disable
+for_window [app_id="Manjaro.manjaro-settings-manager"] floating enable
+for_window [app_id="" title="Picture in picture"] floating enable, sticky enable
+for_window [app_id="xsensors"] floating enable
+for_window [title="Save File"] floating enable
+for_window [title="Firefox — Sharing Indicator"] floating enable
+for_window [app_id="" title=".* is sharing your screen."] floating enable
+for_window [title="wlay"] floating enable
+for_window [instance="^floating foot$"] floating enable
+
+# sway launcher
+#for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10
+for_window [app_id="^ulauncher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border none
+
+# inhibit idle
+for_window [app_id="microsoft teams - preview"] inhibit_idle fullscreen
+
+# titles
+for_window [title="."] title_format "<b>%title</b>"
+#for_window [app_id="foot"] tit
+
 # Home row direction keys, like vim
 set $left h
 set $down j
@@ -95,7 +127,10 @@ set $mod Mod1
 set $win Mod4
 set $config_path $HOME/.config/sway/
 
-bindsym $mod+Return exec $term
+set $term_float footclient --app-id=floating_shell --window-size-chars=128x36
+set $term_float_portrait footclient -a floating_shell_portrait
+
+bindsym $mod+Return exec footclient --app-id=floating_shell --window-size-chars=128x36
 #bindsym $mod+Shift+Return exec kitty
 bindsym $mod+Shift+Return exec $term_float
 bindsym $mod+q kill
